--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/<path>
+spring.datasource.username=postgres
+spring.datasource.password=<password>
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.thymeleaf.cache=false
+
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
 
